fixed the auth
