# Catalog Service/handlers/offers.go
@@ -51,7 +51,7 @@ func (h *OffersHandlers) Connect(business apis.APIBusiness) error {
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers [get]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) GET(ctx echo.Context) error {
 	mydata, err := p.apiBusiness.GET(nil)
@@ -70,7 +70,7 @@ func (p *OffersHandlers) GET(ctx echo.Context) error {
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers [post]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) POST(ctx echo.Context) error {
 	data := extras.GetJSONRawBody(ctx)
@@ -133,7 +133,7 @@ func (p *OffersHandlers) POST(ctx echo.Context) error {
 // @Failure 404 {object} ErrorResponse "Not Found"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers [put]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) PUT(ctx echo.Context) error {
 	data := extras.GetJSONRawBody(ctx)
@@ -201,7 +201,7 @@ func (p *OffersHandlers) PUT(ctx echo.Context) error {
 // @Failure 404 {object} ErrorResponse "Not Found"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers [delete]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) DELETE(ctx echo.Context) error {
 	data := extras.GetJSONRawBody(ctx)
@@ -231,7 +231,7 @@ func (p *OffersHandlers) DELETE(ctx echo.Context) error {
 // @Failure 404 {object} ErrorResponse "Not Found"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers/{offer_guid} [get]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) GETBYID(ctx echo.Context) error {
 	offer_guid := ctx.Param("offer_guid")
@@ -254,7 +254,7 @@ func (p *OffersHandlers) GETBYID(ctx echo.Context) error {
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /offers/multi [post]
-// @Security ApiKeyAuth
+// @Security BearerAuth
 // @Tags offers
 func (p *OffersHandlers) MULTIPOST(ctx echo.Context) error {
 	return handleError(ctx, http.StatusNotImplemented, "Multiple offers creation is not implemented yet", nil)
